--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,13 @@
             <input id="count" type="number" min="1" max="15" value="1" />
           </div>
           <div>
+            <label>Generation mode</label>
+            <select id="gen_mode">
+              <option value="exact" selected>Exact (정확히 개수만큼)</option>
+              <option value="batch">Batch (최대 개수, 모델 결정)</option>
+            </select>
+          </div>
+          <div>
             <label>Watermark</label>
             <select id="watermark">
               <option value="true">true</option>
@@ -44,6 +51,21 @@
             <div>
               <label>Size</label>
               <input id="size" placeholder="2K or 2048x2048" />
+            </div>
+            <div>
+              <label>Aspect ratio (추천 크기 자동 입력)</label>
+              <select id="aspect_ratio">
+                <option value="">Custom</option>
+                <option value="2048x2048">1:1 → 2048x2048</option>
+                <option value="2304x1728">4:3 → 2304x1728</option>
+                <option value="1728x2304">3:4 → 1728x2304</option>
+                <option value="2560x1440">16:9 → 2560x1440</option>
+                <option value="1440x2560">9:16 → 1440x2560</option>
+                <option value="2496x1664">3:2 → 2496x1664</option>
+                <option value="1664x2496">2:3 → 1664x2496</option>
+                <option value="3024x1296">21:9 → 3024x1296</option>
+              </select>
+              <p class="hint">비율을 선택하면 Size 입력에 자동 반영됩니다.</p>
             </div>
             <div>
               <label>Sequential gen</label>
